# wingz-assessment

./: .gitignore  README.md  pyproject.toml
api/: .env.example
api/apps/: conftest.py  urls.py
api/apps/rides/: filters.py  models.py  reports.py  serializers.py  urls.py  views.py
api/apps/rides/migrations/: 0001_initial.py  0002_initial.py
api/apps/rides/tests/: factories.py  test_filters.py  test_models.py  test_serializers.py  test_views.py
api/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/users/migrations/: 0001_initial.py
api/apps/users/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
api/apps/utils/: factories.py  models.py  pagination.py  permissions.py  test_models.py  utils.py
api/config/: asgi.py  urls.py  wsgi.py
api/config/settings/: base.py  local.py  test.py
